fix issue with quantity field
Quantity text input fields with no predetermined range for quantity
would not show the inputed text.
By diminishing the padding value only for the hipothesis of an input
text field (name ending with ||open) we make sure the user will be able
to see the quantity in the field.

--- a/css/foxyshop.css
+++ b/css/foxyshop.css
@@ -229,6 +229,10 @@ http://www.foxy-shop.com/documentation/theme-customization/
 input[type="text"].foxyshop_quantity {
 	width: 30px;
 }
+input[id^=quantity][name$=\|\|open] {
+	padding: 0.5em;
+	display: inline;
+}
 .foxyshop_oldprice {
 	text-decoration: line-through;
 	margin-right: 10px;
